<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guardian</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Send</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_display_message">MyMessage</string>
    <string name="cancel_string">Cancel</string>

    <!-- Login Screen strings -->
    <string name="title_activity_main">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_button_text">Register</string>
    <string name="reenter_password_hint">Reenter password</string>
    <string name="register_name_hint">Your Name</string>
    <string name="title_activity_set_up">SetUpActivity</string>
    <string name="register_address_hint">Home Address</string>
    <string name="register_password_hint">Choose a password</string>
    <string name="register_create_account">Create Account</string>
    <string name="register_activity_title">Register an Account</string>
    <string name="activity_setup_title_string">Set Up Your Tracking</string>

    <!-- Set Up Activity Strings -->
    <string name="setup_pick_time_string">Pick an end time for tracker.</string>
    <string name="setup_pick_date_string">Pick an end date for tracker.</string>
    <string name="setup_start_tracking_string">Start Session</string>
    <string name="username_hint">Username</string>
    <string name="setup_pick_guardians_string">Pick Your Guardians</string>
    <string name="title_activity_view_map">ViewMapActivity</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="type_name">Type friend\'s name</string>
    <string name="setup_pick_guardian">Pick a Guardian</string>
    
    <string name="view_map_title">Map Tracking</string>
    
    <string name="viewmap_location_string">You were at the following locations:</string>

</resources>
