<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/setup_pick_guardians_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:onClick="pickGuardians"
                android:text="@string/setup_pick_guardians_string" />

            <TextView
                android:id="@+id/setup_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_pick_time_string" />

            <TimePicker
                android:id="@+id/setup_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/setup_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/setup_pick_date_string" />

            <CalendarView
                android:id="@+id/calendarView1"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <Button
                android:id="@+id/setup_start_tracking_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startTracking"
                android:text="@string/setup_start_tracking_string" />

            <Button
                android:id="@+id/setup_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="endSetUpActivity"
                android:text="@string/cancel_string" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>