<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <!-- Because it also saids login -->

    <EditText
        android:id="@+id/login_password_textbox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="191dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/login_username_textbox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_password_textbox"
        android:layout_alignLeft="@+id/login_password_textbox"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/login_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_username_textbox"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_password_textbox"
        android:layout_centerVertical="true"
        android:onClick="checkLogIn"
        android:text="@string/title_activity_main" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_alignLeft="@+id/login_password_textbox"
        android:onClick="moveToRegisterActivity"
        android:text="@string/register_button_text" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:contentDescription="Guardian Logo"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>